(lang dune 3.6)

(name caravan)

(generate_opam_files true)

(source
 (github sangwoo-joh/caravan))

(authors "Sangwoo Joh")

(maintainers "work.sangwoo.joh@gmail.com")

(license MIT)

; (documentation https://url/to/documentation)

(package
 (name caravan)
 (synopsis "Static site generator with default support for tree-sitter syntax highlighting")
 (description "Static site generator with default support for tree-sitter syntax highlighting")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
